<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaMeet</string>
    <string name="action_discard">Discard</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_store_in_calender">Store in calender</string>
    <string name="dialog_save_appointment">Do you want to save this appointment?</string>
    <string name="action_settings">Settings</string>
    <string name="action_addFriend">Add friend</string>
    <string name="action_create_appointment">Create appointment</string>
    <string name="main_tab_contacts">contacts</string>
    <string name="main_tab_map">map</string>
    <string name="main_contact_list_empty">No Contacts</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_login_activity">LoginActivity</string>
    <string name="title_activity_addfriend">Add Friend</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_button_chat">Send</string>
    <string name="login_name_first">First Name</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_password_repeat">Repeat password</string>
    <string name="login_register">Register</string>
    <string name="addfriend_username">User name to add</string>
    <string name="title_activity_view_appointment">View Appointment</string>
    <string name="title_activity_edit_appointment">Edit Appointment</string>
    <string name="appointment_edit_title">Title</string>
    <string name="appointment_edit_description">Description</string>
    <string name="appointment_edit_date">Date</string>
    <string name="appointment_edit_time">Time</string>
    <string name="appointment_select_location">Select Location</string>
    <string name="title_activity_select_location">SelectLocationActivity</string>
    <string name="title_activity_view_user">ViewUserActivity</string>
    <string name="action_search">Search Location</string>
    <string name="action_search_hint">Location</string>
    <string name="action_newFriendRequest">Neue Freundesanfrage</string>

</resources>
